# python-edf

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.rst  README_windows.txt  bitbucket-pipelines.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-legacy.py  setup-win64vc9.py  setup.cfg  setup.py  setupegg.py
.github/workflows/: build_wheels.yml
doc/: manylinux.md  notes.md  notes.txt  userman.md
edflib/: __init__.py  _edflib.c  _edflib.pxd  _edflib.pyx  edfreader.py  edfwriter.py  purepythonheader.py  sandbox.py  testint16.py
edflib/utils/: standardtexts.py
edfmmap/: deidentify_edf_files.py  edfheader.py  mmap-example.py
environments/: nedc-py27-linux-dev.yml  py36-linux-dev.yml
examples/: edf_header_dump.py  edfinfo.py  ekghelpers.py  filterdesign.py  filterplots.py  highpassfilter.py  procekg.py  readekg.py  readekg2.py  readekg3.py  show_testedf.ipynb  show_testedf.py  viz_edflib.py
src/: Makefile  README.md  build_linux.sh  build_macosx.sh  build_windows_dll_mingw.bat_  build_windows_mingw.bat_  edflib.xml  sine_generator.c  sweep.c  sweep_generator.c  test_edflib.c  test_generator.c
tests/: edflib.rst  readme.txt  stacklineplot.py  test.py  test_edflib.py  test_edfreader.py  test_edfwriter.py  test_generator.edf
tests/files/: K-complex.rec  PositiveSpikes.edf  calib.rec  calibration-signals.txt  edffile.rec  readme.txt
