
[build-system]
#"setuptools-scm",
requires = ["setuptools>45",  "wheel", "numpy>1.15", "future"]
build-backend = "setuptools.build_meta"

[project]
name = "edflib"
version = "0.86.0"  # until get dynamic working need to update __init__.py to match
#dynamic = ["version"]

# have not gotten this working yet
# [tool.setuptools.dynamic]
# version = {attr = "edflib.__init__.__version__"}
authors = [
  { name = "Chris Lee-Messer"}
]
description = "python edflib is a python package ot allow access to European Data Format files (EDF for short). This is a standard for biological signals such as EEG, evoked potentials and EMG.  This module wraps Teunis van Beelen's edflib."

readme = "README.rst"
dependencies = [
  "future",
  "numpy>1.22",
]

requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["edflib*"]

# [tool.setuptools.extension] # use setup.py for dependent compilation
[project.urls]
Repository = "https://github.com/cleemesser/python-edf"
DOWNLOAD = "https://github.com/cleemesser/python-edf/releases"

[tool.ruff.lint]
select = ["NPY201"]
